// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chat/delete-message/slack DeleteMessage when specified destination does exist performs correctly 1`] = `
Ok {
  "value": Object {},
}
`;

exports[`chat/delete-message/slack DeleteMessage when specified destination does not exist returns error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"channel_not_found\\"
}
AST Path: definitions[0].statements[0].responseHandlers[0].statements[1]
Original Map Location: Line 26, column 7",
}
`;

exports[`chat/delete-message/slack DeleteMessage when specified message id does not exist returns error 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"message_not_found\\"
}
AST Path: definitions[0].statements[0].responseHandlers[0].statements[1]
Original Map Location: Line 26, column 7",
}
`;
